@@ -26,7 +26,7 @@
 	<version>1.0-SNAPSHOT</version>
 	
 	<!-- TODO project name  -->
-	<name>quickstart</name>
+	<name>Planning</name>
 	<description></description>
 	<!--
 		<organization>
@@ -239,6 +239,10 @@
 					<encoding>UTF-8</encoding>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
+					<fork>true</fork>
+					<compilerArgs>
+						<arg>--add-opens=java.base/java.io=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
